# embedded-edge-gateway

./: .gitignore  CMakeLists.txt  README.md
experiments/m10_mqtt/: Database.h  ThreadPool.h  ThreadSafeQueue.h  mqtt_client.cpp  mqtt_pub.cpp  mqtt_sub.cpp  pipeline.cpp
experiments/m11_http/: EventLoop.cpp  EventLoop.h  http_server.cpp
experiments/m12_sqlite/: Statement.h  exec.cpp  hello.cpp  insert.cpp  main_raii.cpp  select.cpp  test_reset.cpp
experiments/m5_parser/: FrameParser.cpp  FrameParser.h  test_crc16.cpp
experiments/m9_timerfd/: reactor_timerfd.cpp  timeout_stress.py  timer_server.cpp  timerfd_create_test.cpp
scripts/: e2e_preflight.sh  e2e_verify.sh  start_vserial.sh  test_vserial.sh
src/: main.cpp
src/app/: CMakeLists.txt  GatewayApp.cpp  GatewayApp.h
src/concurrent/: ThreadSafeQueue.h
src/deploy/: gateway.conf
src/log/: AsyncLogger.cpp  AsyncLogger.h  CMakeLists.txt  Logger.cpp  Logger.h
src/mqtt/: MqttClient.h
src/net/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  WebAsset.h.in
src/serial/: CMakeLists.txt  SerialPort.cpp  SerialPort.h
web/: index.html
